package oop.aufgabe4.muloe;

import javafx.scene.control.Tab;

public abstract class BasisTab {

    public abstract Tab getTab();
}
